Consume newer Roslyn APIs for language services
Roslyn recently introduced async API for obtaining and releasing "batch" objects for applying updates.

This increases the package versions, uses the newer API, fixes some obsolete usages, and gets things building by adding a few package references in order to break the tie on some assembly version conflicts during build.

The package `Microsoft.VisualStudio.Internal.MicroBuild.Swix` was removed, as it conflicted with behaviour inherited via `microsoft.visualstudioeng.microbuild.plugins.swixbuild`, which now comes in transitively, resulting in errors running `swc`. Having both loaded was doubling up the items used to populate arguments, and it was throwing _An item with the same key has already been added._

--- a/setup/ProjectSystemSetup/ProjectSystemSetup.csproj
+++ b/setup/ProjectSystemSetup/ProjectSystemSetup.csproj
@@ -27,6 +27,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StreamJsonRpc" />
+
     <Content Include="UnifiedSettings\ManagedProjectSystem.registration.json">
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
