--- a/setup/VisualStudioEditorsSetup/VisualStudioEditorsSetup.csproj
+++ b/setup/VisualStudioEditorsSetup/VisualStudioEditorsSetup.csproj
@@ -10,6 +10,10 @@
     <_EditorsProjectName>Microsoft.VisualStudio.Editors</_EditorsProjectName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StreamJsonRpc" />
+  </ItemGroup>
+
   <PropertyGroup>
     <RootNamespace>Microsoft.VisualStudio</RootNamespace>
     <TargetFramework>net472</TargetFramework>
