--- a/tests/Microsoft.VisualStudio.Editors.UnitTests/Microsoft.VisualStudio.Editors.UnitTests.vbproj
+++ b/tests/Microsoft.VisualStudio.Editors.UnitTests/Microsoft.VisualStudio.Editors.UnitTests.vbproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StreamJsonRpc" />
+
     <Content Include="img105.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
