--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -97,6 +97,9 @@
     <!-- Framework packages -->
     <PackageVersion Include="Microsoft.IO.Redist"                                                    Version="6.0.0" />
 
+    <!-- MSBuild (for tests only) -->
+    <PackageVersion Include="Microsoft.Build"                                                        Version="17.9.5" />
+
     <!-- Hot Reload -->
     <PackageVersion Include="Microsoft.VisualStudio.HotReload.Components"                            Version="6.0.0-preview.6.21380.4" />
 
