Use cloud symbol server for API Scan (#9518)

--- a/eng/pipelines/templates/analyze-compliance.yml
+++ b/eng/pipelines/templates/analyze-compliance.yml
@@ -28,7 +28,7 @@ steps:
       softwareName: Dotnet-Project-System
       softwareVersionNum: ${{ parameters.SoftwareVersion }}
       softwareBuildNum: $(Build.BuildId)
-      symbolsFolder: SRV*http://symweb
+      symbolsFolder: SRV*https://symweb.azurefd.net
       noCopySymbols: true
       noCopyBinaries: true
       noDecompress: true
